<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/country_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:id="@+id/country_active_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/country_title">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/country_active_cases"/>
            <TextView
                android:id="@+id/country_active_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_deaths_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/country_active_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/country_deaths"/>
            <TextView
                android:id="@+id/country_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_last_update_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/country_deaths_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/country_last_update"/>
            <TextView
                android:id="@+id/country_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_active_100k_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/country_last_update_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/country_active_100k"/>
            <TextView
                android:id="@+id/country_active_100k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_deaths_100k_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/country_active_100k_layout"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:text="@string/country_deaths_100k"/>
            <TextView
                android:id="@+id/country_deaths_100k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="10dp" />
        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/country_history_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_deaths_100k_layout"
            android:indeterminate="true"/>

        <com.anychart.AnyChartView
            android:id="@+id/country_history_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/country_deaths_100k_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/country_history_chart_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/country_deaths_100k_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>